fixed logo padding on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -380,6 +380,7 @@ button {
 
 @media (max-width: 750px) {
   .navbar {
+    padding: 0;
     text-align: center;
   }
   .navbar ul {
